--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="stylesheet" href="/css/main.css">
-    <script src="/js/main.js"></script>
+    <link rel="stylesheet" href="css/main.css">
+    <script src="js/main.js"></script>
 
-    <link rel="stylesheet" href="/css/red.css">
-    <link rel="stylesheet" href="/css/yellow.css">
-    <link rel="stylesheet" href="/css/green.css">
-    <link rel="stylesheet" href="/css/blue.css">
+    <link rel="stylesheet" href="css/red.css">
+    <link rel="stylesheet" href="css/yellow.css">
+    <link rel="stylesheet" href="css/green.css">
+    <link rel="stylesheet" href="css/blue.css">
 
-    <link rel="stylesheet" href="/css/penalties.css">
+    <link rel="stylesheet" href="css/penalties.css">
 
 
     <title>Qwixx board</title>
